--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:     
-    - name: OWASP ZAP Full Scan
-      uses: zaproxy/action-full-scan@v0.1.0
+    steps:
+    - name: ZAP Scan
+      uses: zaproxy/action-baseline@v0.4.0
       with:
-        target: "https://www.google.com"
+       target: 'https://www.zaproxy.org'
+
+    
